--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: sans-serif;
     margin: 2rem;
   }
@@ -14,4 +14,4 @@ body {
     line-height: 200px;
     color: #666;
   }
-  
+   */
